<resources>
    <string name="app_name">SunFinder</string>
    <string name="status_searching">Standort wird gesucht…</string>
    <string name="status_loading">Standort wird geladen…</string>
    <string name="status_denied">Standort-Zugriff verweigert. Bitte in Einstellungen aktivieren.</string>
    <string name="status_error">Standortfehler: %s</string>
    <string name="rec_left">Links setzen für Schatten</string>
    <string name="rec_right">Rechts setzen für Schatten</string>
    <string name="rec_left_sun">Links setzen für Sonne</string>
    <string name="rec_right_sun">Rechts setzen für Sonne</string>
    <string name="rec_front_back">Sonne von vorne oder hinten\n– Beliebige Seite</string>
    <string name="details_with_location">Sonne: %1$s (%2$.0f°) | %3$.0f° über Horizont</string>
    <string name="details_default_location">Sonne: %1$s (%2$.0f°) | %3$.0f° über Horizont | Standardstandort</string>
    <string name="details_moon_with_location">Mond: %1$s (%2$.0f°) | %3$.0f%% erleuchtet</string>
    <string name="details_moon_default_location">Mond: %1$s (%2$.0f°) | %3$.0f%% erleuchtet | Standardstandort</string>
    <string name="settings">Einstellungen</string>
    <string name="back">Zurück</string>
    <string name="pref_description">Wonach möchtest du deinen Sitzplatz auswählen?</string>
    <string name="pref_shade">Lieber im Schatten sitzen</string>
    <string name="pref_sun">Lieber in der Sonne sitzen</string>
</resources>
